Trabalho-Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM identifier SEMICOLON main DOT
Rule 2     main -> const_list var_list statement_list
Rule 3     const_list -> CONST const_decls
Rule 4     const_list -> empty
Rule 5     const_decls -> const_decls const_decl
Rule 6     const_decls -> const_decl
Rule 7     const_decl -> identifier EQUAL INTEGER SEMICOLON
Rule 8     const_decl -> identifier EQUAL STRING SEMICOLON
Rule 9     const_decl -> identifier EQUAL REAL SEMICOLON
Rule 10    const_decl -> identifier EQUAL BOOLEAN SEMICOLON
Rule 11    var_list -> VAR var_decls
Rule 12    var_list -> empty
Rule 13    var_decls -> var_decls var_decl
Rule 14    var_decls -> var_decl
Rule 15    var_decl -> ident_list COLON type_decl SEMICOLON
Rule 16    ident_list -> identifier COMMA ident_list
Rule 17    ident_list -> identifier
Rule 18    type_decl -> ARRAY LBRACKET INTEGER DOT DOT INTEGER RBRACKET OF type
Rule 19    type_decl -> ARRAY LBRACKET identifier DOT DOT identifier RBRACKET OF type
Rule 20    type_decl -> ARRAY LBRACKET INTEGER DOT DOT identifier RBRACKET OF type
Rule 21    type_decl -> ARRAY LBRACKET identifier DOT DOT INTEGER RBRACKET OF type
Rule 22    type_decl -> type
Rule 23    type -> IDENTIFIER
Rule 24    type -> TREAL
Rule 25    type -> TINTEGER
Rule 26    type -> TSTRING
Rule 27    type -> TCHAR
Rule 28    type -> TBOOLEAN
Rule 29    identifier -> IDENTIFIER LBRACKET expression RBRACKET
Rule 30    identifier -> IDENTIFIER
Rule 31    statement_list -> BEGIN statement_seq END
Rule 32    statement_seq -> statement_seq SEMICOLON statement
Rule 33    statement_seq -> statement_seq SEMICOLON
Rule 34    statement_seq -> statement
Rule 35    statement -> writeln
Rule 36    statement -> write
Rule 37    statement -> readln
Rule 38    statement -> read
Rule 39    statement -> assign
Rule 40    statement -> if_stmt
Rule 41    statement -> for_loop
Rule 42    statement -> while_loop
Rule 43    statement -> statement_list
Rule 44    assign -> identifier ASSIGN expression
Rule 45    expression -> expression PLUS expression
Rule 46    expression -> expression MINUS expression
Rule 47    expression -> expression TIMES expression
Rule 48    expression -> expression DIVISION expression
Rule 49    expression -> expression DIV expression
Rule 50    expression -> expression MOD expression
Rule 51    expression -> expression EQUAL expression
Rule 52    expression -> expression DIFFERENT expression
Rule 53    expression -> expression LESS expression
Rule 54    expression -> expression GREATER expression
Rule 55    expression -> expression LEQ expression
Rule 56    expression -> expression GEQ expression
Rule 57    expression -> expression AND expression
Rule 58    expression -> expression OR expression
Rule 59    expression -> NOT expression
Rule 60    expression -> LPAR expression RPAR
Rule 61    expression -> length
Rule 62    expression -> identifier
Rule 63    expression -> INTEGER
Rule 64    expression -> REAL
Rule 65    expression -> CHAR
Rule 66    expression -> STRING
Rule 67    expression -> BOOLEAN
Rule 68    if_stmt -> IF expression THEN statement
Rule 69    if_stmt -> IF expression THEN statement ELSE statement
Rule 70    for_loop -> FOR identifier ASSIGN expression TO expression DO statement
Rule 71    for_loop -> FOR identifier ASSIGN expression DOWNTO expression DO statement
Rule 72    while_loop -> WHILE expression DO statement
Rule 73    writeln -> WRITELN LPAR phrase RPAR
Rule 74    writeln -> WRITELN
Rule 75    write -> WRITE LPAR phrase RPAR
Rule 76    phrase -> phrase_list
Rule 77    phrase_list -> phrase_list COMMA phrase_item
Rule 78    phrase_list -> phrase_item
Rule 79    phrase_item -> STRING
Rule 80    phrase_item -> CHAR
Rule 81    phrase_item -> identifier
Rule 82    phrase_item -> INTEGER
Rule 83    phrase_item -> REAL
Rule 84    read -> READ LPAR identifier RPAR
Rule 85    readln -> READLN LPAR identifier RPAR
Rule 86    readln -> READLN
Rule 87    length -> LENGTH LPAR identifier RPAR
Rule 88    empty -> <empty>

Terminals, with rules where they appear

AND                  : 57
ARRAY                : 18 19 20 21
ASSIGN               : 44 70 71
BEGIN                : 31
BOOLEAN              : 10 67
CHAR                 : 65 80
COLON                : 15
COMMA                : 16 77
COMMENT              : 
CONST                : 3
DIFFERENT            : 52
DIV                  : 49
DIVISION             : 48
DO                   : 70 71 72
DOT                  : 1 18 18 19 19 20 20 21 21
DOWNTO               : 71
ELSE                 : 69
END                  : 31
EQUAL                : 7 8 9 10 51
FOR                  : 70 71
GEQ                  : 56
GREATER              : 54
IDENTIFIER           : 23 29 30
IF                   : 68 69
INTEGER              : 7 18 18 20 21 63 82
LBRACKET             : 18 19 20 21 29
LENGTH               : 87
LEQ                  : 55
LESS                 : 53
LPAR                 : 60 73 75 84 85 87
MINUS                : 46
MOD                  : 50
NOT                  : 59
OF                   : 18 19 20 21
OR                   : 58
PLUS                 : 45
PROGRAM              : 1
RBRACKET             : 18 19 20 21 29
READ                 : 84
READLN               : 85 86
REAL                 : 9 64 83
RPAR                 : 60 73 75 84 85 87
SEMICOLON            : 1 7 8 9 10 15 32 33
STRING               : 8 66 79
TBOOLEAN             : 28
TCHAR                : 27
THEN                 : 68 69
TIMES                : 47
TINTEGER             : 25
TO                   : 70
TREAL                : 24
TSTRING              : 26
VAR                  : 11
WHILE                : 72
WRITE                : 75
WRITELN              : 73 74
error                : 

Nonterminals, with rules where they appear

assign               : 39
const_decl           : 5 6
const_decls          : 3 5
const_list           : 2
empty                : 4 12
expression           : 29 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 68 69 70 70 71 71 72
for_loop             : 41
ident_list           : 15 16
identifier           : 1 7 8 9 10 16 17 19 19 20 21 44 62 70 71 81 84 85 87
if_stmt              : 40
length               : 61
main                 : 1
phrase               : 73 75
phrase_item          : 77 78
phrase_list          : 76 77
read                 : 38
readln               : 37
start                : 0
statement            : 32 34 68 69 69 70 71 72
statement_list       : 2 43
statement_seq        : 31 32 33
type                 : 18 19 20 21 22
type_decl            : 15
var_decl             : 13 14
var_decls            : 11 13
var_list             : 2
while_loop           : 42
write                : 36
writeln              : 35

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM identifier SEMICOLON main DOT

    PROGRAM         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM . identifier SEMICOLON main DOT
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    identifier                     shift and go to state 3

state 3

    (1) start -> PROGRAM identifier . SEMICOLON main DOT

    SEMICOLON       shift and go to state 5


state 4

    (29) identifier -> IDENTIFIER . LBRACKET expression RBRACKET
    (30) identifier -> IDENTIFIER .

    LBRACKET        shift and go to state 6
    SEMICOLON       reduce using rule 30 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 30 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 30 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 30 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 30 (identifier -> IDENTIFIER .)
    DIVISION        reduce using rule 30 (identifier -> IDENTIFIER .)
    DIV             reduce using rule 30 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 30 (identifier -> IDENTIFIER .)
    EQUAL           reduce using rule 30 (identifier -> IDENTIFIER .)
    DIFFERENT       reduce using rule 30 (identifier -> IDENTIFIER .)
    LESS            reduce using rule 30 (identifier -> IDENTIFIER .)
    GREATER         reduce using rule 30 (identifier -> IDENTIFIER .)
    LEQ             reduce using rule 30 (identifier -> IDENTIFIER .)
    GEQ             reduce using rule 30 (identifier -> IDENTIFIER .)
    AND             reduce using rule 30 (identifier -> IDENTIFIER .)
    OR              reduce using rule 30 (identifier -> IDENTIFIER .)
    RPAR            reduce using rule 30 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 30 (identifier -> IDENTIFIER .)
    DO              reduce using rule 30 (identifier -> IDENTIFIER .)
    END             reduce using rule 30 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 30 (identifier -> IDENTIFIER .)
    TO              reduce using rule 30 (identifier -> IDENTIFIER .)
    DOWNTO          reduce using rule 30 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 30 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 30 (identifier -> IDENTIFIER .)
    ASSIGN          reduce using rule 30 (identifier -> IDENTIFIER .)
    DOT             reduce using rule 30 (identifier -> IDENTIFIER .)


state 5

    (1) start -> PROGRAM identifier SEMICOLON . main DOT
    (2) main -> . const_list var_list statement_list
    (3) const_list -> . CONST const_decls
    (4) const_list -> . empty
    (88) empty -> .

    CONST           shift and go to state 9
    VAR             reduce using rule 88 (empty -> .)
    BEGIN           reduce using rule 88 (empty -> .)

    main                           shift and go to state 7
    const_list                     shift and go to state 8
    empty                          shift and go to state 10

state 6

    (29) identifier -> IDENTIFIER LBRACKET . expression RBRACKET
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIVISION expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression MOD expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression DIFFERENT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression GREATER expression
    (55) expression -> . expression LEQ expression
    (56) expression -> . expression GEQ expression
    (57) expression -> . expression AND expression
    (58) expression -> . expression OR expression
    (59) expression -> . NOT expression
    (60) expression -> . LPAR expression RPAR
    (61) expression -> . length
    (62) expression -> . identifier
    (63) expression -> . INTEGER
    (64) expression -> . REAL
    (65) expression -> . CHAR
    (66) expression -> . STRING
    (67) expression -> . BOOLEAN
    (87) length -> . LENGTH LPAR identifier RPAR
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    NOT             shift and go to state 12
    LPAR            shift and go to state 13
    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    LENGTH          shift and go to state 21
    IDENTIFIER      shift and go to state 4

    expression                     shift and go to state 11
    length                         shift and go to state 14
    identifier                     shift and go to state 15

state 7

    (1) start -> PROGRAM identifier SEMICOLON main . DOT

    DOT             shift and go to state 22


state 8

    (2) main -> const_list . var_list statement_list
    (11) var_list -> . VAR var_decls
    (12) var_list -> . empty
    (88) empty -> .

    VAR             shift and go to state 24
    BEGIN           reduce using rule 88 (empty -> .)

    var_list                       shift and go to state 23
    empty                          shift and go to state 25

state 9

    (3) const_list -> CONST . const_decls
    (5) const_decls -> . const_decls const_decl
    (6) const_decls -> . const_decl
    (7) const_decl -> . identifier EQUAL INTEGER SEMICOLON
    (8) const_decl -> . identifier EQUAL STRING SEMICOLON
    (9) const_decl -> . identifier EQUAL REAL SEMICOLON
    (10) const_decl -> . identifier EQUAL BOOLEAN SEMICOLON
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    const_decls                    shift and go to state 26
    const_decl                     shift and go to state 27
    identifier                     shift and go to state 28

state 10

    (4) const_list -> empty .

    VAR             reduce using rule 4 (const_list -> empty .)
    BEGIN           reduce using rule 4 (const_list -> empty .)


state 11

    (29) identifier -> IDENTIFIER LBRACKET expression . RBRACKET
    (45) expression -> expression . PLUS expression
    (46) expression -> expression . MINUS expression
    (47) expression -> expression . TIMES expression
    (48) expression -> expression . DIVISION expression
    (49) expression -> expression . DIV expression
    (50) expression -> expression . MOD expression
    (51) expression -> expression . EQUAL expression
    (52) expression -> expression . DIFFERENT expression
    (53) expression -> expression . LESS expression
    (54) expression -> expression . GREATER expression
    (55) expression -> expression . LEQ expression
    (56) expression -> expression . GEQ expression
    (57) expression -> expression . AND expression
    (58) expression -> expression . OR expression

    RBRACKET        shift and go to state 29
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVISION        shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    EQUAL           shift and go to state 36
    DIFFERENT       shift and go to state 37
    LESS            shift and go to state 38
    GREATER         shift and go to state 39
    LEQ             shift and go to state 40
    GEQ             shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43


state 12

    (59) expression -> NOT . expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIVISION expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression MOD expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression DIFFERENT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression GREATER expression
    (55) expression -> . expression LEQ expression
    (56) expression -> . expression GEQ expression
    (57) expression -> . expression AND expression
    (58) expression -> . expression OR expression
    (59) expression -> . NOT expression
    (60) expression -> . LPAR expression RPAR
    (61) expression -> . length
    (62) expression -> . identifier
    (63) expression -> . INTEGER
    (64) expression -> . REAL
    (65) expression -> . CHAR
    (66) expression -> . STRING
    (67) expression -> . BOOLEAN
    (87) length -> . LENGTH LPAR identifier RPAR
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    NOT             shift and go to state 12
    LPAR            shift and go to state 13
    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    LENGTH          shift and go to state 21
    IDENTIFIER      shift and go to state 4

    expression                     shift and go to state 44
    length                         shift and go to state 14
    identifier                     shift and go to state 15

state 13

    (60) expression -> LPAR . expression RPAR
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIVISION expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression MOD expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression DIFFERENT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression GREATER expression
    (55) expression -> . expression LEQ expression
    (56) expression -> . expression GEQ expression
    (57) expression -> . expression AND expression
    (58) expression -> . expression OR expression
    (59) expression -> . NOT expression
    (60) expression -> . LPAR expression RPAR
    (61) expression -> . length
    (62) expression -> . identifier
    (63) expression -> . INTEGER
    (64) expression -> . REAL
    (65) expression -> . CHAR
    (66) expression -> . STRING
    (67) expression -> . BOOLEAN
    (87) length -> . LENGTH LPAR identifier RPAR
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    NOT             shift and go to state 12
    LPAR            shift and go to state 13
    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    LENGTH          shift and go to state 21
    IDENTIFIER      shift and go to state 4

    expression                     shift and go to state 45
    length                         shift and go to state 14
    identifier                     shift and go to state 15

state 14

    (61) expression -> length .

    RBRACKET        reduce using rule 61 (expression -> length .)
    PLUS            reduce using rule 61 (expression -> length .)
    MINUS           reduce using rule 61 (expression -> length .)
    TIMES           reduce using rule 61 (expression -> length .)
    DIVISION        reduce using rule 61 (expression -> length .)
    DIV             reduce using rule 61 (expression -> length .)
    MOD             reduce using rule 61 (expression -> length .)
    EQUAL           reduce using rule 61 (expression -> length .)
    DIFFERENT       reduce using rule 61 (expression -> length .)
    LESS            reduce using rule 61 (expression -> length .)
    GREATER         reduce using rule 61 (expression -> length .)
    LEQ             reduce using rule 61 (expression -> length .)
    GEQ             reduce using rule 61 (expression -> length .)
    AND             reduce using rule 61 (expression -> length .)
    OR              reduce using rule 61 (expression -> length .)
    RPAR            reduce using rule 61 (expression -> length .)
    THEN            reduce using rule 61 (expression -> length .)
    DO              reduce using rule 61 (expression -> length .)
    END             reduce using rule 61 (expression -> length .)
    SEMICOLON       reduce using rule 61 (expression -> length .)
    ELSE            reduce using rule 61 (expression -> length .)
    TO              reduce using rule 61 (expression -> length .)
    DOWNTO          reduce using rule 61 (expression -> length .)


state 15

    (62) expression -> identifier .

    RBRACKET        reduce using rule 62 (expression -> identifier .)
    PLUS            reduce using rule 62 (expression -> identifier .)
    MINUS           reduce using rule 62 (expression -> identifier .)
    TIMES           reduce using rule 62 (expression -> identifier .)
    DIVISION        reduce using rule 62 (expression -> identifier .)
    DIV             reduce using rule 62 (expression -> identifier .)
    MOD             reduce using rule 62 (expression -> identifier .)
    EQUAL           reduce using rule 62 (expression -> identifier .)
    DIFFERENT       reduce using rule 62 (expression -> identifier .)
    LESS            reduce using rule 62 (expression -> identifier .)
    GREATER         reduce using rule 62 (expression -> identifier .)
    LEQ             reduce using rule 62 (expression -> identifier .)
    GEQ             reduce using rule 62 (expression -> identifier .)
    AND             reduce using rule 62 (expression -> identifier .)
    OR              reduce using rule 62 (expression -> identifier .)
    RPAR            reduce using rule 62 (expression -> identifier .)
    THEN            reduce using rule 62 (expression -> identifier .)
    DO              reduce using rule 62 (expression -> identifier .)
    END             reduce using rule 62 (expression -> identifier .)
    SEMICOLON       reduce using rule 62 (expression -> identifier .)
    ELSE            reduce using rule 62 (expression -> identifier .)
    TO              reduce using rule 62 (expression -> identifier .)
    DOWNTO          reduce using rule 62 (expression -> identifier .)


state 16

    (63) expression -> INTEGER .

    RBRACKET        reduce using rule 63 (expression -> INTEGER .)
    PLUS            reduce using rule 63 (expression -> INTEGER .)
    MINUS           reduce using rule 63 (expression -> INTEGER .)
    TIMES           reduce using rule 63 (expression -> INTEGER .)
    DIVISION        reduce using rule 63 (expression -> INTEGER .)
    DIV             reduce using rule 63 (expression -> INTEGER .)
    MOD             reduce using rule 63 (expression -> INTEGER .)
    EQUAL           reduce using rule 63 (expression -> INTEGER .)
    DIFFERENT       reduce using rule 63 (expression -> INTEGER .)
    LESS            reduce using rule 63 (expression -> INTEGER .)
    GREATER         reduce using rule 63 (expression -> INTEGER .)
    LEQ             reduce using rule 63 (expression -> INTEGER .)
    GEQ             reduce using rule 63 (expression -> INTEGER .)
    AND             reduce using rule 63 (expression -> INTEGER .)
    OR              reduce using rule 63 (expression -> INTEGER .)
    RPAR            reduce using rule 63 (expression -> INTEGER .)
    THEN            reduce using rule 63 (expression -> INTEGER .)
    DO              reduce using rule 63 (expression -> INTEGER .)
    END             reduce using rule 63 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 63 (expression -> INTEGER .)
    ELSE            reduce using rule 63 (expression -> INTEGER .)
    TO              reduce using rule 63 (expression -> INTEGER .)
    DOWNTO          reduce using rule 63 (expression -> INTEGER .)


state 17

    (64) expression -> REAL .

    RBRACKET        reduce using rule 64 (expression -> REAL .)
    PLUS            reduce using rule 64 (expression -> REAL .)
    MINUS           reduce using rule 64 (expression -> REAL .)
    TIMES           reduce using rule 64 (expression -> REAL .)
    DIVISION        reduce using rule 64 (expression -> REAL .)
    DIV             reduce using rule 64 (expression -> REAL .)
    MOD             reduce using rule 64 (expression -> REAL .)
    EQUAL           reduce using rule 64 (expression -> REAL .)
    DIFFERENT       reduce using rule 64 (expression -> REAL .)
    LESS            reduce using rule 64 (expression -> REAL .)
    GREATER         reduce using rule 64 (expression -> REAL .)
    LEQ             reduce using rule 64 (expression -> REAL .)
    GEQ             reduce using rule 64 (expression -> REAL .)
    AND             reduce using rule 64 (expression -> REAL .)
    OR              reduce using rule 64 (expression -> REAL .)
    RPAR            reduce using rule 64 (expression -> REAL .)
    THEN            reduce using rule 64 (expression -> REAL .)
    DO              reduce using rule 64 (expression -> REAL .)
    END             reduce using rule 64 (expression -> REAL .)
    SEMICOLON       reduce using rule 64 (expression -> REAL .)
    ELSE            reduce using rule 64 (expression -> REAL .)
    TO              reduce using rule 64 (expression -> REAL .)
    DOWNTO          reduce using rule 64 (expression -> REAL .)


state 18

    (65) expression -> CHAR .

    RBRACKET        reduce using rule 65 (expression -> CHAR .)
    PLUS            reduce using rule 65 (expression -> CHAR .)
    MINUS           reduce using rule 65 (expression -> CHAR .)
    TIMES           reduce using rule 65 (expression -> CHAR .)
    DIVISION        reduce using rule 65 (expression -> CHAR .)
    DIV             reduce using rule 65 (expression -> CHAR .)
    MOD             reduce using rule 65 (expression -> CHAR .)
    EQUAL           reduce using rule 65 (expression -> CHAR .)
    DIFFERENT       reduce using rule 65 (expression -> CHAR .)
    LESS            reduce using rule 65 (expression -> CHAR .)
    GREATER         reduce using rule 65 (expression -> CHAR .)
    LEQ             reduce using rule 65 (expression -> CHAR .)
    GEQ             reduce using rule 65 (expression -> CHAR .)
    AND             reduce using rule 65 (expression -> CHAR .)
    OR              reduce using rule 65 (expression -> CHAR .)
    RPAR            reduce using rule 65 (expression -> CHAR .)
    THEN            reduce using rule 65 (expression -> CHAR .)
    DO              reduce using rule 65 (expression -> CHAR .)
    END             reduce using rule 65 (expression -> CHAR .)
    SEMICOLON       reduce using rule 65 (expression -> CHAR .)
    ELSE            reduce using rule 65 (expression -> CHAR .)
    TO              reduce using rule 65 (expression -> CHAR .)
    DOWNTO          reduce using rule 65 (expression -> CHAR .)


state 19

    (66) expression -> STRING .

    RBRACKET        reduce using rule 66 (expression -> STRING .)
    PLUS            reduce using rule 66 (expression -> STRING .)
    MINUS           reduce using rule 66 (expression -> STRING .)
    TIMES           reduce using rule 66 (expression -> STRING .)
    DIVISION        reduce using rule 66 (expression -> STRING .)
    DIV             reduce using rule 66 (expression -> STRING .)
    MOD             reduce using rule 66 (expression -> STRING .)
    EQUAL           reduce using rule 66 (expression -> STRING .)
    DIFFERENT       reduce using rule 66 (expression -> STRING .)
    LESS            reduce using rule 66 (expression -> STRING .)
    GREATER         reduce using rule 66 (expression -> STRING .)
    LEQ             reduce using rule 66 (expression -> STRING .)
    GEQ             reduce using rule 66 (expression -> STRING .)
    AND             reduce using rule 66 (expression -> STRING .)
    OR              reduce using rule 66 (expression -> STRING .)
    RPAR            reduce using rule 66 (expression -> STRING .)
    THEN            reduce using rule 66 (expression -> STRING .)
    DO              reduce using rule 66 (expression -> STRING .)
    END             reduce using rule 66 (expression -> STRING .)
    SEMICOLON       reduce using rule 66 (expression -> STRING .)
    ELSE            reduce using rule 66 (expression -> STRING .)
    TO              reduce using rule 66 (expression -> STRING .)
    DOWNTO          reduce using rule 66 (expression -> STRING .)


state 20

    (67) expression -> BOOLEAN .

    RBRACKET        reduce using rule 67 (expression -> BOOLEAN .)
    PLUS            reduce using rule 67 (expression -> BOOLEAN .)
    MINUS           reduce using rule 67 (expression -> BOOLEAN .)
    TIMES           reduce using rule 67 (expression -> BOOLEAN .)
    DIVISION        reduce using rule 67 (expression -> BOOLEAN .)
    DIV             reduce using rule 67 (expression -> BOOLEAN .)
    MOD             reduce using rule 67 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 67 (expression -> BOOLEAN .)
    DIFFERENT       reduce using rule 67 (expression -> BOOLEAN .)
    LESS            reduce using rule 67 (expression -> BOOLEAN .)
    GREATER         reduce using rule 67 (expression -> BOOLEAN .)
    LEQ             reduce using rule 67 (expression -> BOOLEAN .)
    GEQ             reduce using rule 67 (expression -> BOOLEAN .)
    AND             reduce using rule 67 (expression -> BOOLEAN .)
    OR              reduce using rule 67 (expression -> BOOLEAN .)
    RPAR            reduce using rule 67 (expression -> BOOLEAN .)
    THEN            reduce using rule 67 (expression -> BOOLEAN .)
    DO              reduce using rule 67 (expression -> BOOLEAN .)
    END             reduce using rule 67 (expression -> BOOLEAN .)
    SEMICOLON       reduce using rule 67 (expression -> BOOLEAN .)
    ELSE            reduce using rule 67 (expression -> BOOLEAN .)
    TO              reduce using rule 67 (expression -> BOOLEAN .)
    DOWNTO          reduce using rule 67 (expression -> BOOLEAN .)


state 21

    (87) length -> LENGTH . LPAR identifier RPAR

    LPAR            shift and go to state 46


state 22

    (1) start -> PROGRAM identifier SEMICOLON main DOT .

    $end            reduce using rule 1 (start -> PROGRAM identifier SEMICOLON main DOT .)


state 23

    (2) main -> const_list var_list . statement_list
    (31) statement_list -> . BEGIN statement_seq END

    BEGIN           shift and go to state 48

    statement_list                 shift and go to state 47

state 24

    (11) var_list -> VAR . var_decls
    (13) var_decls -> . var_decls var_decl
    (14) var_decls -> . var_decl
    (15) var_decl -> . ident_list COLON type_decl SEMICOLON
    (16) ident_list -> . identifier COMMA ident_list
    (17) ident_list -> . identifier
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    var_decls                      shift and go to state 49
    var_decl                       shift and go to state 50
    ident_list                     shift and go to state 51
    identifier                     shift and go to state 52

state 25

    (12) var_list -> empty .

    BEGIN           reduce using rule 12 (var_list -> empty .)


state 26

    (3) const_list -> CONST const_decls .
    (5) const_decls -> const_decls . const_decl
    (7) const_decl -> . identifier EQUAL INTEGER SEMICOLON
    (8) const_decl -> . identifier EQUAL STRING SEMICOLON
    (9) const_decl -> . identifier EQUAL REAL SEMICOLON
    (10) const_decl -> . identifier EQUAL BOOLEAN SEMICOLON
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    VAR             reduce using rule 3 (const_list -> CONST const_decls .)
    BEGIN           reduce using rule 3 (const_list -> CONST const_decls .)
    IDENTIFIER      shift and go to state 4

    const_decl                     shift and go to state 53
    identifier                     shift and go to state 28

state 27

    (6) const_decls -> const_decl .

    IDENTIFIER      reduce using rule 6 (const_decls -> const_decl .)
    VAR             reduce using rule 6 (const_decls -> const_decl .)
    BEGIN           reduce using rule 6 (const_decls -> const_decl .)


state 28

    (7) const_decl -> identifier . EQUAL INTEGER SEMICOLON
    (8) const_decl -> identifier . EQUAL STRING SEMICOLON
    (9) const_decl -> identifier . EQUAL REAL SEMICOLON
    (10) const_decl -> identifier . EQUAL BOOLEAN SEMICOLON

    EQUAL           shift and go to state 54


state 29

    (29) identifier -> IDENTIFIER LBRACKET expression RBRACKET .

    SEMICOLON       reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    RBRACKET        reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    PLUS            reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    MINUS           reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    TIMES           reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DIVISION        reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DIV             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    MOD             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    EQUAL           reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DIFFERENT       reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    LESS            reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    GREATER         reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    LEQ             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    GEQ             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    AND             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    OR              reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    RPAR            reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    THEN            reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DO              reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    END             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    ELSE            reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    TO              reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DOWNTO          reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    COMMA           reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    COLON           reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    ASSIGN          reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)
    DOT             reduce using rule 29 (identifier -> IDENTIFIER LBRACKET expression RBRACKET .)


state 30

    (45) expression -> expression PLUS . expression
    (45) expression -> . expression PLUS expression
    (46) expression -> . expression MINUS expression
    (47) expression -> . expression TIMES expression
    (48) expression -> . expression DIVISION expression
    (49) expression -> . expression DIV expression
    (50) expression -> . expression MOD expression
    (51) expression -> . expression EQUAL expression
    (52) expression -> . expression DIFFERENT expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression GREATER expression
    (55) expression -> . expression LEQ expression
    (56) expression -> . expression GEQ expression
    (57) expression -> . expression AND expression
    (58) expression -> . expression OR expression
    (59) expression -> . NOT expression
    (60) expression -> . LPAR expression RPAR
    (61) expression -> . length
    (62) expression -> . identifier
    (63) expression -> . INTEGER
    (64) expression -> . REAL
    (65) expression -> . CHAR
    (66) expression -> . STRING
    (67) expression -> . BOOLEAN
    (87) length -> . LENGTH LPAR identifier RPAR
    (29) identifier -> . IDENTIFIER LBRACKET expression RBRACKET
    (30) identifier -> . IDENTIFIER

    NOT             shift and go to state 12
    LPAR            shift and go to state 13
    INTEGER         shift and go to state 16
    REAL            shift and go to state 17
    CHAR            shift and go to state 18
    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    LENGTH          shift and go to state 21
    IDENTIFIER      shift and go to state 4

    expression                     shift and go to state 55
    length                         shift and go to state 14
    identifier                     shift and go to state 15

state 31
